# fucinapp

./: .gitignore  .pre-commit-config.yaml  Procfile  README.md  build.sh  db.sqlite3  main.py  manage.py  pyproject.toml  railway.toml  requirements.txt  start.sh
.github/workflows/: ci.yml
anagrafica/: admin.py  admin_mixins.py  apps.py  cf_utils.py  email_utils.py  forms.py  models.py  pdf_utils.py  tests.py  urls.py  views.py
anagrafica/management/: getcomuni.py
anagrafica/migrations/: 0001_initial.py  0002_socio_delete_soci.py  0003_socio_qr_code_socio_token_quota.py  0004_alter_quota_options_socio_approvato_and_more.py  0005_socio_consenso_marketing.py  0006_alter_quota_data_inizio_alter_quota_data_scadenza.py  0007_remove_quota_note.py  0008_socio_consenso_immagini_and_more.py  0009_socio_firma.py  0010_quota_pdf_iscrizione.py  0011_socio_telefono.py  0012_remove_socio_indirizzo_socio_cap_socio_comune_and_more.py  0013_alter_socio_cap_alter_socio_comune_and_more.py  0014_socio_tipo.py  0015_socio_tutore_codice_fiscale_socio_tutore_cognome_and_more.py  0016_socio_tutore_residenza.py  0017_remove_quota_pdf_iscrizione_alter_socio_tipo.py  0018_alter_socio_tipo.py  0019_add_documento_alternativo.py
anagrafica/templatetags/: dashboard_tags.py
configurazione/: admin.py  apps.py  models.py  tests.py
configurazione/migrations/: 0001_initial.py  0002_alter_configurazione_consiglio_direttivo.py  0003_configurazione_cf.py  (+9 more)
registro_soci/: asgi.py  settings.py  urls.py  wsgi.py
reports/: admin.py  apps.py  models.py  scheduler.py  tests.py
(+23 files in other folders)
