[project]
name = "fucinapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.12",
    "django-import-export>=4.4.0",
    "qrcode[pil]>=8.2",
    "reportlab>=4.4.10",
    "tablib[xlsx]>=3.9.0",
]
[dependency-groups]
dev = [
    "pdbpp>=0.11.7",
    "pytest-cov>=6.2.1,<7",
    "pytest>=8.4.1,<9",
    "ruff>=0.12.8,<1",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-autodoc-typehints>=3.2.0",
    "pre-commit>=4.5.1",
]
