[project]
name = "fucinapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=5.2.12",
    "django-import-export>=4.4.0",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.11",
    "qrcode[pil]>=8.2",
    "reportlab>=4.4.10",
    "resend>=2.26.0",
    "tablib[xlsx]>=3.9.0",
    "whitenoise>=6.12.0",
]
[dependency-groups]
dev = [
    "pdbpp>=0.11.7",
    "pytest-cov>=6.2.1,<7",
    "pytest>=8.4.1,<9",
    "ruff>=0.12.8,<1",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-autodoc-typehints>=3.2.0",
    "pre-commit>=4.5.1",
]
